<resources>
    <string name="app_name">appListaCurso</string>
    <string name="aplicativo_lista_vip_curso_android">Aplicativo Lista VIP Curso Android</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="limpar">LIMPAR</string>
    <string name="salvar">SALVAR</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
</resources>